2010-09-12  Bernhard Kraft  <kraftb@think-open.at>

	* Added the "types" feature which allows to have different fields depending on a select-box field
	* Introducted tabs for table configuration

2010-08-23 Bernhard Stähli <ben@grooves.ch>

	* Added localization support. A checkbox in the table record enables localization.

2010-07-25  Bernhard Kraft  <kraftb@think-open.at>

	* Changes to container fields, so selecting parent-field is now obligatory. If no parent field is selected a default one gets created
	* Added the "invisible" field type (passthrough)

2010-04-22  Bernhard Kraft  <kraftb@think-open.at>

	* Updated copyright date to 2010

2010-01-20  Bernhard Kraft  <kraftb@think-open.at>

	* Added radiobuttons fieldType

2009-12-24  Bernhard Kraft  <kraftb@think-open.at>

	* Added field type "Inverse DB Relation". Thanks to Bernhard Stähli for this patch.
	* New feature for field-types "field_config.xml": Dependencies. This allows to require specific extension versions for fields being available.
	* Added field type "DAM". Only available if DAM > 1.0.0 is installed. Thanks to Bernhard Stähli for this patch.

2009-11-24  Bernhard Kraft  <kraftb@think-open.at>

	* Preliminary implemented feature: Setting crdate/tstamp as BE sort field for table (Commented out currently)

2009-11-23  Bernhard Kraft  <kraftb@think-open.at>

	* Implemented feature: Field type "Dropdown" implementing the select box field type

2009-11-08  Bernhard Kraft  <kraftb@think-open.at>

	* Implemented feature: Field type "Tab" to allow separation of fields into tabs of alt_doc

2009-11-05  Bernhard Kraft  <kraftb@think-open.at>

	* Implemented feature: Field type "RTE"
	* Fixed typo: Every field type localang.xml had the word "property" misspelled	
	* Added feature: It is now possible, to define a "where" part for database relations, so only items on the current page can be selected
	* Fixed Bug: Sorting of fields in created record did not respect sorting in table record field list